--- a/mini_project/build.gradle
+++ b/mini_project/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    //Swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
     //JWT
     implementation 'com.auth0:java-jwt:3.19.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
